force-app/main/default/objects/ERA_Census__c/ERA_Census__c.object-meta.xml
<CustomObject>
    <label>ERA Census</label>
    <nameField>
        <displayFormat>ERAC-{000000}</displayFormat>
        <label>ERA Census</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERA Census</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>