force-app/main/default/objects/ERA_Census__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ERA Census</relationshipLabel>
    <relationshipName>ERA_Census</relationshipName>
    <type>Lookup</type>
</CustomField>