force-app/main/default/objects/ERA_Census__c/fields/I_RS_ERA_Collection__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_Collection__c</fullName>
    <label>ERA Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>