force-app/main/default/objects/ERA_Census__c/fields/I_RS_ERA_Employment_Function__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_Employment_Function__c</fullName>
    <label>ERA Employment Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclude</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>Error - Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>