force-app/main/default/objects/ERA_Census__c/fields/I_RS_ERA_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_Employment_Status__c</fullName>
    <label>ERA Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Error - Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>