force-app/main/default/objects/ERA_Census__c/fields/I_RS_ERA_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_Level__c</fullName>
    <label>ERA Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Error - Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>