force-app/main/default/objects/ERA_Census__c/fields/I_RS_ERA_Level_Numeric__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_Level_Numeric__c</fullName>
    <label>ERA Level Numeric</label>
    <length>10</length>
    <type>Text</type>
</CustomField>