force-app/main/default/objects/ERA_Census__c/fields/I_RS_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>