force-app/main/default/objects/ERA_Census__c/fields/I_RS_Gender__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Gender__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>