force-app/main/default/objects/ERA_Census__c/fields/I_RS_HR_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HR_Employment_Status__c</fullName>
    <label>HR Employment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>