force-app/main/default/objects/ERA_Census__c/fields/I_RS_HR_FTE__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HR_FTE__c</fullName>
    <label>HR FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>