force-app/main/default/objects/ERA_Census__c/fields/I_RS_La_Trobe_Affiliated_Pubs__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_Affiliated_Pubs__c</fullName>
    <label>La Trobe Affiliated Pubs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>