force-app/main/default/objects/ERA_Census__c/fields/I_RS_Manual_Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Manual_Override_Notes__c</fullName>
    <label>Manual Override Notes</label>
    <type>TextArea</type>
</CustomField>