force-app/main/default/objects/ERA_Census__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Contact__c</columns>
    <columns>I_RS_ERA_Collection__c</columns>
    <columns>I_RS_Manual_Override__c</columns>
    <columns>I_RS_Manual_Override_Notes__c</columns>
    <columns>I_RS_ERA_Level__c</columns>
    <columns>I_RS_HR_Employment_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>